Fix Firefox scrollbar overlay

--- a/src/components/CastList.module.scss
+++ b/src/components/CastList.module.scss
@@ -8,7 +8,7 @@
     content: '';
     position: absolute;
     height: 2em;
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     bottom: 0;
     display: block;
     background: linear-gradient(0deg, rgba(235, 240, 247, 1) 0%, rgba(235, 240, 247, 0) 100%);
@@ -19,7 +19,7 @@
     display: block;
     top: 0;
     height: 3em;
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     background: #ebf0f7;
     z-index: 1;
 
