--- a/src/components/Segments.module.scss
+++ b/src/components/Segments.module.scss
@@ -6,7 +6,7 @@
     content: '';
     position: absolute;
     height: 2em;
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     bottom: 0;
     display: block;
     background: linear-gradient(0deg, rgba(235, 240, 247, 1) 0%, rgba(235, 240, 247, 0) 100%);
@@ -14,7 +14,7 @@
 
   h4 {
     position: absolute;
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     background: #ebf0f7;
     height: 2em;
 
