--- a/src/index.scss
+++ b/src/index.scss
@@ -549,7 +549,7 @@ table.table.corpus th:focus {
     position: absolute;
     top: 0;
     height: 3em;
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     z-index: 1;
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
 
@@ -563,7 +563,7 @@ table.table.corpus th:focus {
     position: absolute;
     bottom: 0;
     height: 6em;
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     z-index: 1;
     background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
 
